[package]
name = "rust-heroku-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
